# level2_cv_semanticsegmentation-cv-18

./: .gitignore
baseline/: custom_train.py  dataset.py  inference.py  loss.py  model.py  model_run.sh
baseline/nohup/: (314_315)_nohup.out  305_nohup.out  306_320_nohup.out  307_nohup.out  310_(312)_nohup.out  313_nohup.out  314_nohup.out  319_nohup.out  321_322_318_nohup.out  330_332_nohup.out
lightning/: README.md  convert_model.py  inference.py  old_train.py  pyproject.toml  run.sh  train.py
lightning/configs/: base_train.yaml  train.yaml
lightning/configs/augmentation/: base.yaml
lightning/configs/model/: deeplab-adam-steplr.yaml  fpn-sgd-cosinewarm.yaml  hrnet-unet.yaml  internimage-adam-steplr.yaml  internimageb-adam-steplr.yaml  internimageb-fpn.yaml  internimageb-pan.yaml  internimageb-upernet.yaml  resnet101-deeplabv3+.yaml  resnet101-fpn.yaml  swinb-fpn.yaml  swinb-pan.yaml  swinb-upernet.yaml  unet-hrnet-adamw-reducelr.yaml
lightning/configs/optimizer/: adam.yaml  sgd.yaml
lightning/configs/scheduler/: cosinewarmrestarts.yaml  reduceonplateau.yaml  step.yaml
lightning/data/: data_module.py  new_data_module.py
lightning/models/: base_module.py
lightning/models/components/: fcn.py  fpn.py  intern_seg.py  internimage.py  swintransformer.py  upernet.py  upernet_intern.py  upernet_swin.py
lightning/models/components/ops_dcnv3/modules/: dcnv3.py
pytorch baseline/: custom_train.py  dataset.py  loss.py  model.py  model_run.sh  utils.py
pytorch baseline/hrnet/: hrnet_ocr.py
pytorch baseline/hrnet/hrnet_config/: hrnet_ocr_w48.yaml
